# atlas

./: .gitignore  README.md  pyproject.toml  spec.md
.beads/: issues.jsonl
.github/workflows/: tests.yml
src/atlas/: __init__.py
src/atlas/adapters/: __init__.py  artifact_store.py  filesystem_store.py  llm.py  memory_ticket_system.py  ticket_system.py
src/atlas/config/: __init__.py  settings.py
src/atlas/controller/: __init__.py  base.py  persistence.py  reconciler.py  retry.py
src/atlas/models/: __init__.py  artifact.py  enums.py  manifest.py  results.py  work_item.py
src/atlas/observability/: __init__.py  events.py  logging.py  metrics.py
src/atlas/planner/: __init__.py  base.py  dag_planner.py
src/atlas/splitter/: __init__.py  base.py  cobol.py  line_based.py  registry.py
src/atlas/utils/: __init__.py  hashing.py
src/atlas/workers/: __init__.py  aggregator.py  aggregator_impl.py  base.py  challenger.py  challenger_impl.py  finalize_impl.py  followup_impl.py  patch_merge_impl.py  scribe.py  scribe_impl.py
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py
tests/fixtures/cobol/: customer_copy.cpy  empty_program.cbl  error_codes.cpy  large_program.cbl  malformed.cbl  medium_program.cbl  small_program.cbl
tests/fixtures/llm_responses/: __init__.py  challenge_responses.json  chunk_analysis.json  followup_responses.json  merge_responses.json
tests/integration/: __init__.py  mock_agent_harness.py  mock_llm.py  test_end_to_end.py  test_workflow.py
tests/unit/: __init__.py  test_cobol_splitter.py  test_config.py  test_dag_planner.py  test_enums.py  test_filesystem_store.py  test_hashing.py  test_memory_ticket_system.py  test_models.py  test_reconciler.py  test_splitter_registry.py  test_workers.py
tests/unit/controller/: __init__.py  test_issue_routing.py  test_persistence.py  test_phases.py  test_retry.py
tests/unit/observability/: test_events.py  test_logging.py  test_metrics.py
